# bitunix-rs

./: Cargo.toml
src/: client.rs  lib.rs  utils.rs
src/restful/: account.rs  kline.rs  mod.rs  models.rs  sign.rs  trading.rs
src/ws/: futures_ws_private.rs  mod.rs  types.rs  websocket.rs
src/ws/model/: balance.rs  kline.rs  mod.rs  order.rs  position_event.rs  tp_sl_order.rs
