[package]
homepage = "https://github.com/mr-gaochen/bitunix-rs.git"
name = "bitunix-rs"
version = "0.1.0"
edition = "2021"
authors = ["GaoCheng <wooyulan@163.com>"]
description = "BitUinx Rust SDK"
license = "MIT"
keywords = ["sdk", "bitunix", "bitunix-rs"]


[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha256 = "1.6.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10.8"
hex = "0.4.3"
urlencoding = "2.1.3"
rand = "0.8.5"
