[package]
homepage = "https://github.com/mr-gaochen/bitunix-rs.git"
name = "bitunix-rs"
version = "0.1.0"
edition = "2021"
authors = ["GaoCheng <wooyulan@163.com>"]
description = "BitUinx Rust SDK"
license = "MIT"
keywords = ["sdk", "bitunix", "bitunix-rs"]


[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha256 = "1.6.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10.8"
hex = "0.4.3"
urlencoding = "2.1.3"
rand = "0.8.5"
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
chrono = "0.4.41"
hmac = "0.12.1"
